change icon size and fav

--- a/index.html
+++ b/index.html
@@ -2,11 +2,7 @@
 <html lang="en">
 	<head>
 		<meta charset="UTF-8" />
-		<link
-			rel="icon"
-			type="image/svg+xml"
-			href="https://api.logo.com/api/v2/images?logo=logo_571bdf4c-af07-4b82-b3eb-13a0574cfc5a&format=webp&margins=0&quality=60&width=500&background=transparent&u=1693409071"
-		/>
+		<link rel="icon" type="image/svg+xml" href="./favicon.png" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>Trello Todo</title>
 
