--- a/index.html
+++ b/index.html
@@ -2,15 +2,19 @@
 <html lang="en">
 	<head>
 		<meta charset="UTF-8" />
-		<link rel="icon" type="image/svg+xml" href="./favicon.png" />
+		<link rel="icon" type="image/svg+xml" href="./favicon-16x16.png" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<title>Trello Todo</title>
+		<title>Task Tide</title>
 
 		<!-- Fonts -->
 		<!-- Noto Sans -->
 		<link rel="preconnect" href="https://fonts.googleapis.com" />
 		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
 		<link href="https://fonts.googleapis.com/css2?family=Noto+Sans&display=swap" rel="stylesheet" />
+
+		<link rel="preconnect" href="https://fonts.googleapis.com" />
+		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+		<link href="https://fonts.googleapis.com/css2?family=Permanent+Marker&family=Satisfy&display=swap" rel="stylesheet" />
 	</head>
 	<body>
 		<div id="root"></div>
